RESOLVED FIXED168213
Unprefix -webkit-line-break
https://bugs.webkit.org/show_bug.cgi?id=168213
Summary Unprefix -webkit-line-break
Myles C. Maxfield
Reported 2017-02-12 16:31:26 PST
Attachments
Patch (3.64 KB, patch)
2017-02-26 17:02 PST, Myles C. Maxfield
no flags
Patch (8.51 KB, patch)
2017-02-26 20:57 PST, Myles C. Maxfield
no flags
Archive of layout-test-results from ews102 for mac-elcapitan (964.36 KB, application/zip)
2017-02-26 22:09 PST, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (819.59 KB, application/zip)
2017-02-26 22:13 PST, Build Bot
no flags
Patch (11.63 KB, patch)
2017-02-26 22:35 PST, Myles C. Maxfield
darin: review+
commit-queue: commit-queue-
Myles C. Maxfield
Comment 1 2017-02-26 17:02:57 PST
Myles C. Maxfield
Comment 2 2017-02-26 20:57:30 PST
Build Bot
Comment 3 2017-02-26 22:09:25 PST
Comment on attachment 302804 [details] Patch Attachment 302804 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3199772 New failing tests: svg/css/getComputedStyle-basic.xhtml fast/css/getComputedStyle/computed-style.html fast/css/getComputedStyle/computed-style-without-renderer.html
Build Bot
Comment 4 2017-02-26 22:09:28 PST
Created attachment 302811 [details] Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5 2017-02-26 22:13:52 PST
Comment on attachment 302804 [details] Patch Attachment 302804 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3199773 New failing tests: svg/css/getComputedStyle-basic.xhtml fast/css/getComputedStyle/computed-style.html fast/css/getComputedStyle/computed-style-without-renderer.html
Build Bot
Comment 6 2017-02-26 22:13:55 PST
Created attachment 302812 [details] Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 7 2017-02-26 22:35:05 PST
Simon Fraser (smfr)
Comment 8 2017-02-27 09:01:44 PST
Comment on attachment 302816 [details] Patch Is the "after-white-space" value specified? I couldn't find it.
WebKit Commit Bot
Comment 9 2017-02-27 14:26:27 PST
Comment on attachment 302816 [details] Patch Rejecting attachment 302816 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 302816, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: tComputedStyle/computed-style-expected.txt patching file LayoutTests/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt patching file LayoutTests/fast/text/line-break-unprefixed-expected.html patching file LayoutTests/fast/text/line-break-unprefixed.html patching file LayoutTests/svg/css/getComputedStyle-basic-expected.txt Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Darin Adler']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/3204548
Myles C. Maxfield
Comment 10 2017-02-27 14:43:01 PST
Note You need to log in before you can comment on or make changes to this bug.