Unprefix -webkit-line-break https://bugs.webkit.org/show_bug.cgi?id=168213

Reviewed by Darin Adler.

Source/WebCore:

We support the property as specced.

Test: fast/text/line-break-unprefixed.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::propertyValue):
* css/CSSProperties.json:
* css/parser/CSSParserFastPaths.cpp:
(WebCore::CSSParserFastPaths::isValidKeywordPropertyAndValue):
(WebCore::CSSParserFastPaths::isKeywordPropertyID):
* editing/Editor.cpp:
(WebCore::Editor::applyEditingStyleToElement):
* html/HTMLElement.cpp:
(WebCore::HTMLElement::collectStyleForPresentationAttribute):

LayoutTests:

Updating expected results.

* fast/css/getComputedStyle/computed-style-expected.txt:
* fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* fast/text/line-break-unprefixed.html: Added.
* fast/text/line-break-unprefixed-expected.html: Added.
* svg/css/getComputedStyle-basic-expected.txt:

Canonical link: https://commits.webkit.org/185926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213094 268f45cc-cd09-0410-ab3c-d52691b4dbfc